tools/tests/ui/fail/l1048.cnf
// Test file for error code: L1048
// Expected error: Missing IMAGE-JPG character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
